finally remove django.jQuery (jQ v.1.4) from Cyclope it only remains in Django's Admin, and will be updated with it pages using markitup already include latest jQuery, but when removing it they will have to include it instead

--- a/cyclope/templates/admin/cyclope/menuitem/change_form.html
+++ b/cyclope/templates/admin/cyclope/menuitem/change_form.html
@@ -4,13 +4,12 @@
 {% block after_related_objects %}
 {{ block.super }}
 
+{# TODO(NumericA) move to its own JS #}
+
 {# chainedSelect for MenuItem #}
 
 <script type="text/javascript">
 //<![CDATA[
-
-{#// TODO when upgrading django, and django.jQuery, remove isolation #}
-(function($){
 
 $(function() {
   $("#id_content_view").chainedSelect({
@@ -91,8 +90,6 @@ $(function() {
     });
 
 });
-
-})(django.jQuery);
 
 //]]>
 </script>
