--- a/cyclope/templates/admin/base_content_change_form.html
+++ b/cyclope/templates/admin/base_content_change_form.html
@@ -13,6 +13,8 @@
 
 {% block after_related_objects %}
 
+{# TODO(NumericA) move this to its own JS }
+
 {# chainedSelect for Collectibles derived classes  #}
 
 <script type="text/javascript">
