--- a/cyclope/templates/admin/base_content_change_form.html
+++ b/cyclope/templates/admin/base_content_change_form.html
@@ -13,7 +13,7 @@
 
 {% block after_related_objects %}
 
-{# TODO(NumericA) move this to its own JS }
+{# TODO(NumericA) move this to its own JS #}
 
 {# chainedSelect for Collectibles derived classes  #}
 
