--- a/cyclope/templates/cyclope/themes/cyclope-bootstrap/base.html
+++ b/cyclope/templates/cyclope/themes/cyclope-bootstrap/base.html
@@ -41,7 +41,7 @@
         {% bootstrap_skin_link %}
         <!-- Custom CSS -->
         <link href="{% static 'css/cyclope.less' %}" rel="stylesheet{% if not COMPRESS_ENABLED %}/less{% endif %}" type="text/less"/>
-        <link href="{{ CYCLOPE_THEME_MEDIA_URL }}css/jquery.smartmenus.bootstrap.css" rel="stylesheet">
+        <link href="{% static 'css/jquery.smartmenus.bootstrap.css' %}" rel="stylesheet">
     {% endblock cyclopecss %}
     {% endblock displaycss %}
     {% endcompress %}
