--- a/cyclope/apps/media_widget/templates/media_widget/pagination_footer.html
+++ b/cyclope/apps/media_widget/templates/media_widget/pagination_footer.html
@@ -25,7 +25,7 @@ $(function(){
             {% else %}
                 url = "{% url pictures-new %}" + query_str;
             {% endif %}
-            window.location.href = url; //{# just navigate, or ajax? #}
+            window.location.href = url; //{#TODO(NumericA) just navigate, or ajax? #}
         {% endif %}
     });
 });
