--- a/cyclope/apps/media_widget/templates/media_widget/picture_select.html
+++ b/cyclope/apps/media_widget/templates/media_widget/picture_select.html
@@ -12,11 +12,11 @@
                 <a href="{{ picture.image }}" target="_blank"><img src="{% version picture.image.path 'fb_thumb' %}" title="{{picture.description}}" class="thumbnail"/></a>
             </td>
             <td>
-                <button class="btn btn-primary btn-xs" name="picture_id" value="{{picture.pk}}">{% trans 'Seleccionar' %}</button>
+                <button class="btn btn-primary btn-xs" name="picture_id" value="{{picture.pk}}">{% trans 'Select' %}</button>
             </td>
         </tr>
         {% empty %}
-            <p class="lead">{% trans 'No ha subido im&aacute;genes para seleccionar.' %}</P>
+            <p class="lead">{% trans "You haven't uploaded any images to select." %}</p>
         {% endfor %}
     </table>
 </form>
