some translatable strings fixed in MW

--- a/cyclope/apps/media_widget/templates/media_widget/picture_form.html
+++ b/cyclope/apps/media_widget/templates/media_widget/picture_form.html
@@ -38,6 +38,6 @@
         </button>
     </div>
     <div class="col-xs-6 text-muted" style="font-size: 10px;">
-        {% trans 'Remember you can add more media to this content from the Media Library.' %}
+        {% trans 'Remember you can add more media to this content from the Media Library' %}
     </div>
 </div>
