--- a/cyclope/apps/media_widget/templates/media_widget/media_widget.html
+++ b/cyclope/apps/media_widget/templates/media_widget/media_widget.html
@@ -30,7 +30,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="form-group" style="margin-bottom:0;">
-                    <label for="selectMediaType">{% trans 'ContentType' %}</label>
+                    <label for="selectMediaType">{% trans 'Content type' %}</label>
                     {# TODO(NumericA) Load Media Content Types from Cyclope #}
                     <select id="selectMediaType" class="form-control">
                         <option value="picture">{% trans 'Image' %}</option>
