Fixed content-object in include templates

--- a/cyclope/apps/articles/templates/articles/article_teaser.html
+++ b/cyclope/apps/articles/templates/articles/article_teaser.html
@@ -41,7 +41,7 @@
 			{% include "cyclope/author_block_teaser.html"  %}
 			<p class="teaser_more">
 				<a class="btn btn-primary" href="{{ article.get_absolute_url }}" role="button">{% trans "More" %}</a>
-				{% include "cyclope/teaser_tools_block.html" with current_object=categorization.content_object %}
+				{% include "cyclope/teaser_tools_block.html" with current_object=article %}
 				<img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/article.png" alt="article icon"/>
 			</p>
 		</div>
