--- a/cyclope/apps/medialibrary/templates/medialibrary/medialibrary_base_teaser.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/medialibrary_base_teaser.html
@@ -37,7 +37,7 @@
 			<a class="btn btn-primary" href="{{ current_object.get_absolute_url  }}" role="button">
 				{% trans "More" %}
 			</a>
-			{% include "cyclope/teaser_tools_block.html" with current_object=categorization.content_object %}
+			{% include "cyclope/teaser_tools_block.html" with current_object=current_object %}
 			{% if CYCLOPE_THEME_TYPE == 'bootstrap' %}
 				<img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/{{ current_object.get_object_name }}.png" alt="icon" />
 			{% endif %}
