--- a/cyclope/static/themes/cyclope-bootstrap/css/cyclope.less
+++ b/cyclope/static/themes/cyclope-bootstrap/css/cyclope.less
@@ -1,4 +1,5 @@
-html,
+html{padding-top:0 !important;}
+
 body {
   overflow-x: hidden;
   /* Prevent scroll on narrow devices */
@@ -546,3 +547,8 @@ footer,
 
 /*Paginator*/
 #right .paginator, #left .paginator {padding:0; font-size: 12px; line-height:1.5;border-radius:3px;}
+
+/*Affix*/
+nav.affix {top:0; z-index:1; margin-top:0;}
+.affix {width:100%;}
+.navbar {border-radius:0;margin-bottom:10px;}
