--- a/cyclope/apps/staticpages/templates/staticpages/staticpage_detail.html
+++ b/cyclope/apps/staticpages/templates/staticpages/staticpage_detail.html
@@ -1,51 +1,40 @@
 {% extends host_template %}
 {% load i18n cyclope_utils fb_versions %}
-
 {% comment %}
 When inserted in a layout region the host template used is just a wrapper (see inline_view.html).
 When showing the StaticPage as the main content of the view, the host_template is the layout template.
 {% endcomment %}
-
 {% block content %}
-
-{% if not user.is_authenticated and not staticpage.published %}
-  <div class="alert alert-danger" role="alert">
-		<span class="glyphicon glyphicon-ban-circle"></span>
-			<a href="{% url auth_login %}?next={{ request.path }}">{% trans "This content isn't public, please log in" %}
-		</a>
-	</div>
-{% else %}
-
-<div class="content-view staticpage detail staticpage-detail html-content">
-  
-    <h2 class="title">{{ staticpage.name }}</h2>
-   	{% include 'cyclope/content_tools_block.html' %}
-
- <!-- descripcion -->
-  {% if staticpage.summary %}
-		{% if CYCLOPE_THEME_TYPE == 'bootstrap' %}
-			<div class="summary">{{ staticpage.summary|smart_style }}</div>
-		{% elif CYCLOPE_THEME_TYPE == 'classic' %}
-			<div class="summary">{{ staticpage.summary|smart_style}}</div>
-		{% endif %}
-  {% endif %}
-  <!-- /descripcion -->
-  
-  {% if staticpage.pictures %}
-    <a href="{% url staticpage-detail staticpage.slug %}">
-        <img class="img-responsive" src="{% version staticpage.pictures.0.image.path 'big' %}" />
-    </a>
-  {% endif %}
-  
-   
-  
-  <div class="text">{{ staticpage.text|smart_style }}</div>
-
-<div class="meta-content">{% include 'collections/categories_navigation_block.html' %}</div>
-
-  {% include 'cyclope/related_contents_block.html' %}
-
-</div>
-
-{% endif %}
+    {% if not user.is_authenticated and not staticpage.published %}
+        <div class="alert alert-danger" role="alert">
+            <span class="glyphicon glyphicon-ban-circle"></span>
+                <a href="{% url auth_login %}?next={{ request.path }}">{% trans "This content isn't public, please log in" %}
+            </a>
+        </div>
+    {% else %}
+        <div class="content-view staticpage detail staticpage-detail html-content">
+        {# TODOsan: It's neccessary to put any views option in detail to show or not the title and summary, in this moment this option has a comment. #}
+            {% comment %}
+                <h2 class="title">{{ staticpage.name }}</h2>
+                {% include 'cyclope/content_tools_block.html' %}
+                <!-- descripcion -->
+                {% if staticpage.summary %}
+                    {% if CYCLOPE_THEME_TYPE == 'bootstrap' %}
+                        <div class="summary">{{ staticpage.summary|smart_style }}</div>
+                    {% elif CYCLOPE_THEME_TYPE == 'classic' %}
+                        <div class="summary">{{ staticpage.summary|smart_style}}</div>
+                    {% endif %}
+                {% endif %}
+                <!-- /descripcion -->
+            {% endcomment %}
+            {% if staticpage.pictures %}
+                <a href="{% url staticpage-detail staticpage.slug %}">
+                    <img class="img-responsive" src="{% version staticpage.pictures.0.image.path 'big' %}" />
+                </a>
+            {% endif %}
+            <div class="text">{{ staticpage.text|smart_style }}</div>
+            <div class="meta-content">{% include 'collections/categories_navigation_block.html' %}</div>
+            {% include 'cyclope/related_contents_block.html' %}
+        </div>
+    {% endif %}
 {% endblock content%}
