Fixed navbar if header image exist

--- a/cyclope/static/themes/cyclope-bootstrap/css/cyclope.less
+++ b/cyclope/static/themes/cyclope-bootstrap/css/cyclope.less
@@ -1,4 +1,5 @@
-html{padding-top:0 !important;}
+html {padding-top:35px;}
+html.head_image {padding-top:0 !important;}
 
 body {
   overflow-x: hidden;
