--- a/cyclope/templates/cyclope/themes/cyclope-bootstrap/base.html
+++ b/cyclope/templates/cyclope/themes/cyclope-bootstrap/base.html
@@ -10,7 +10,7 @@
 
 {% load layout i18n cyclope_utils compress staticfiles %}
 
-{# TODO(sanhoerth): find best way to show lang-tag in mulitlang enviroment #}
+{# TODO(sanhoerth): find best way to show lang-tag in multilang enviroment #}
 <html lang="es" {% if CYCLOPE_SITE_SETTINGS.head_image %}class="head_image"{% endif %}>
 <head>
     <!-- ### Meta ### -->
@@ -59,8 +59,8 @@
     <![endif]-->
 </head>
 
-<body class="{% block body_class %}{%endblock%}" >
-    <nav class="navbar {% if not CYCLOPE_SITE_SETTINGS.head_image %}navbar-fixed-top{% endif %} navbar-inverse" {% if CYCLOPE_SITE_SETTINGS.head_image %}data-spy="affix" data-offset-top="0"{% endif %} >
+<body class="{% block body_class %}{%endblock%} {% if CYCLOPE_SITE_SETTINGS.head_image %}head_image{% endif %}" >
+    <nav class="navbar navbar-inverse navbar-fixed-top" {% if CYCLOPE_SITE_SETTINGS.head_image %}data-spy="affix" data-offset-top="0"{% endif %}>
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -81,7 +81,6 @@
     <div class="container">
         {% block page_header %}
             {% if CYCLOPE_SITE_SETTINGS.head_image %}
-                <style type="text/css"> html { padding-top: 10px; } body { padding-top: 0; }</style>
                 <div class="brand">
                     <a href="/">
                     <img src="{{ MEDIA_URL }}{{ CYCLOPE_SITE_SETTINGS.head_image }}" alt="{{ CYCLOPE_SITE_SETTINGS.head_image }}" class="img-responsive">
