--- a/cyclope/apps/medialibrary/templates/medialibrary/medialibrary_base_teaser.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/medialibrary_base_teaser.html
@@ -1,49 +1,69 @@
 {% load i18n cyclope_utils fb_versions dbgettext_tags %}
 
 {% block content %}
-<div class="content-view media {{ current_object.get_object_name }} teaser {{ current_object.get_object_name }}-teaser {% if region_name %}{% inline_content_classes %}{% endif%}">
+    <div class="content-view media {{ current_object.get_object_name }} teaser {{ current_object.get_object_name }}-teaser {% if region_name %}{% inline_content_classes %}{% endif%}">
 
-  {% if current_object.image %}
-      <div class="teaser_icon_container media-content">
-      <a href="{% if current_object.skip_detail %}{{ current_object.content_url }}{% else %}{{ current_object.get_absolute_url }}{% endif%}" {% if current_object.new_window %}target="_blank"{% endif%}>
-        <img class="teaser_icon img-responsive" src="{% version current_object.image.path 'thumbnail' %}" alt="{{ current_object.name }}" />
-      </a>
+        {% if simplified_view %}
+            <div class="teaser_text_container_simplified">
+                <h2 class="title">
+                    <a href="{% if current_object.skip_detail %}
+                                {{ current_object.content_url }}
+                                {% else %}
+                                {{ current_object.get_absolute_url }}
+                                {% endif%}"
+                       {% if current_object.new_window %}
+                            target="_blank"
+                       {% endif%}>
+                        {{ current_object.name }}
+                    </a>
+                </h2>
+                {% include "cyclope/author_block_teaser.html" with author=current_object.author %}
+            </div>
+
+        {% else%}
+
+          {% if current_object.image %}
+              <div class="teaser_icon_container media-content">
+              <a href="{% if current_object.skip_detail %}{{ current_object.content_url }}{% else %}{{ current_object.get_absolute_url }}{% endif%}" {% if current_object.new_window %}target="_blank"{% endif%}>
+                <img class="teaser_icon img-responsive" src="{% version current_object.image.path 'thumbnail' %}" alt="{{ current_object.name }}" />
+              </a>
+            </div>
+          {% endif %}
+
+            <div class="teaser_text_container{% if article.pictures.values.count == 0 %}_fullwidth{% endif %}">
+
+                <div class="pretitle-container first meta-content">
+                  <div class="date">
+                      {{ current_object.creation_date|date:'SHORT_DATE_FORMAT' }}
+                  </div>
+                </div>
+
+              <h2 class="title">
+                    <a href="{% if current_object.skip_detail %}{{ current_object.content_url }}{% else %}{{ current_object.get_absolute_url }}{% endif%}" {% if current_object.new_window %}target="_blank"{% endif%}>{{ current_object.name }}</a>
+              </h2>
+
+
+
+                    {% if current_object.description %}
+                        <div class="html-content summary">{{ current_object.description|smart_style }}
+                        {% block player %}
+                        {% endblock player %}
+                     </div>
+                     {% endif %}
+
+                    {% include "cyclope/author_block_teaser.html" with author=current_object.author %}
+                    <p class="teaser_more center-block">
+                        <a class="btn btn-primary" href="{{ current_object.get_absolute_url  }}" role="button">
+                            {% trans "More" %}
+                        </a>
+                        {% include "cyclope/teaser_tools_block.html" with current_object=current_object %}
+                        {% if CYCLOPE_THEME_TYPE == 'bootstrap' %}
+                            <img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/{{ current_object.get_object_name }}.png" alt="icon" />
+                        {% endif %}
+                    </p>
+
+            </div>
+        <div class="clear"></div>
+        {% endif %}
     </div>
-  {% endif %}
-
-<div class="teaser_text_container{% if article.pictures.values.count == 0 %}_fullwidth{% endif %}">
-
-    <div class="pretitle-container first meta-content">
-      <div class="date">
-        {{ current_object.creation_date|date:'SHORT_DATE_FORMAT' }}
-      </div>
-    </div>
-
-  <h2 class="title">
-		<a href="{% if current_object.skip_detail %}{{ current_object.content_url }}{% else %}{{ current_object.get_absolute_url }}{% endif%}" {% if current_object.new_window %}target="_blank"{% endif%}>{{ current_object.name }}</a>
-  </h2>
-
-
-
-		{% if current_object.description %}
-			<div class="html-content summary">{{ current_object.description|smart_style }}
-			{% block player %}
-			{% endblock player %}
-		 </div>
-		 {% endif %}
-
-		{% include "cyclope/author_block_teaser.html" with author=current_object.author %}
-		<p class="teaser_more center-block">
-			<a class="btn btn-primary" href="{{ current_object.get_absolute_url  }}" role="button">
-				{% trans "More" %}
-			</a>
-			{% include "cyclope/teaser_tools_block.html" with current_object=current_object %}
-			{% if CYCLOPE_THEME_TYPE == 'bootstrap' %}
-				<img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/{{ current_object.get_object_name }}.png" alt="icon" />
-			{% endif %}
-		</p>
-
-</div>
-  <div class="clear"></div>
-</div>
 {% endblock content%}
